[package]
name = "button"
description = "A fast and correct build system backend."
version = "0.1.0"
authors = ["Jason White"]
license = "MIT"
repository = "https://github.com/jasonwhite/button-rs"
edition = "2018"

[lib]
name = "button"
path = "src/button/lib.rs"

[dependencies]
atty = "0.2"
bincode = "1"
bit-set = "0.5"
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.6"
failure = "0.1"
failure_derive = "0.1"
generic-array = { version = "0.12", features = ["serde"] }
hex = "0.3"
holyhashmap = { version = "0.1", features = ["serde"] }
nom = "^4.1"
num_cpus = "1"
os_pipe = "0.8"
rand = "0.6"
reqwest = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.8"
structopt = "0.2"
termcolor = "1"

[dependencies.tempfile]
git = "https://github.com/Stebalien/tempfile"
branch = "master"
